--- a/spring-api/src/main/resources/application.properties
+++ b/spring-api/src/main/resources/application.properties
@@ -1,3 +1,18 @@
 spring.application.name=demo-app
 
 server.port=8080
+
+SPRING_DATASOURCE_URL = jdbc:postgresql://localhost:5432/testdb
+SPRING_DATASOURCE_USERNAME = user
+SPRING_DATASOURCE_PASSWORD = 123
+
+
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
